--- a/css/style2.css
+++ b/css/style2.css
@@ -3,8 +3,13 @@
     font-family: 'Roboto Slab', serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 *{
     box-sizing: border-box;
+    
 }
 
 body{
@@ -48,6 +53,7 @@ body{
     display: flex;
     margin: 0 auto;
     width: 75%;
+    max-width: 1200px;
     padding-bottom: 100px;
 }
 
@@ -113,16 +119,16 @@ body{
     padding-top: 30px;;
 }
 
-.button {
+.button-link{
     font-family: 'Montserrat';
     text-transform: uppercase;
     color: #FFFFFF;
     background: none;
     border: solid 2px #FFFFFF;
-    padding: 20px 35px;
-    max-width: 180px;
+    padding: 20px 25px;
     align-self: center;
     margin-top: 50px;
+    text-decoration: none;
 }
 
 /*MAIN*/
@@ -144,7 +150,7 @@ body{
     margin: 0;
 }
 
-.section__title::after {
+.section__decoration::after {
     content:"";
     display: block;
     width: 50px;
@@ -165,7 +171,9 @@ body{
 
 .services__list {
     display: flex;
-    justify-content:space-between;
+    justify-content:space-evenly;
+
+    padding: 0;
 }
 
 .services__item {
@@ -241,35 +249,103 @@ body{
 
 .about-us__content {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .about-us__text {
     font-size: 0.9rem;
-    width: 45%;
+    width: 47%;
     margin: 0;
     padding: 60px 0;
 }
 
 .about-us__cards {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
 .about-us__item {
-    width: 22.5%;
-}
-.about-us__item:nth-child(n+2) {
-    margin-left: 2%;
+    width: 22%;
 }
 
 .img-box {
-    width: 260px;
-    height: 250px;
+    width: 100%;
+    height: auto;
+   
+    position: relative;
+}
+
+.block-active{
+    position:absolute;
+    left:0;
+    bottom:0;
+    right:0;
+    top:0;
+    background: #555555;
+    opacity: 0.7;
+    padding:5px;
+    display:none;
+
+    padding-top: 190px;
+}
+
+.profile__contacts {
+   display: flex;
+   justify-content: center;
+}
+
+.profile-box{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+}
+
+.profile__contact {
+    width: 1.2em;
+    height: 1.2em;
+    display: inline-block;
+  
+    text-indent: -9999px;
     overflow: hidden;
+    text-decoration: none;  
+    color: #ffffff;
+    opacity: 1;
+    
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+
+  .profile-box:hover {
+    background-color:#c0301c;
+    
+  }
+  .profile__contact:nth-child(n+2) {
+    margin-left: 1em;
+  }
+
+.profile__contact_facebook {
+    background-image: url("../img/Facebook\ Logo.png");
+  }
+  
+  .profile__contact_twitter {
+    background-image: url("../img/Twitter\ Logo\ Silhouette.png");
+  }
+  
+  .profile__contact_google {
+    background-image: url("../img/Google\ Plus\ Logo.png");
+  }
+
+  .profile__contact_linkedin {
+    background-image: url("../img/fa-linkedin.png");
+  }
+.img-box:hover .block-active{
+    display:block;
 }
 
 .about-us__picture {
@@ -294,6 +370,7 @@ body{
 
 .latest-works {
     flex-direction: column;
+    
 }
 
 .latest-works__options {
@@ -324,18 +401,18 @@ body{
 .latest-works__content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     
 }
 
 .latest-works__img-box {
     width: 30%;
-    height: 321px;
+    height: 320px;
     overflow: hidden;
 }
 
 .latest-works__img-box:nth-child(n+4) {
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 .call-for-action {
@@ -391,17 +468,17 @@ body{
 .blog-posts__content {
     display: flex;
     margin-top: 75px;
+    justify-content: space-around;
 }
 .blog-post__picture {
-    width: 44%;
+    width: 40%;
 }
 
 .blog-post__img {
     width: 100%;
 }
 .blog-posts__item {
-    margin-left: 3%;
-    width: 53%;
+    width: 50%;
 }
 .blog-posts_header-box {
     display: flex;
@@ -488,6 +565,11 @@ body{
     text-decoration: none;
 }
 
+.customers-section {
+    background-color:#dddddd ;
+    padding-top: 100px;
+}
+
 .customers {
     flex-direction: column;
     align-items: center;
@@ -525,6 +607,102 @@ body{
     font-size: 1.25rem;
     margin: 0;
     padding: 0;
+}
+
+.contact-us {
+    flex-direction: column;
+}
+
+.contact-us__content {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 75px;
+}
+
+.contacts {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30%;
+}
+
+.contact-form {
+    width: 70%;
+}
+
+.form-box {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    box-sizing: border-box;
+    padding: 0 50px;
+    margin-bottom: 25px;
+}
+
+.form-group {
+    width: 47%;
+}
+
+.form-group_textarea {
+    width:100%;
+    padding: 0 50px;
+}
+
+.field {
+    padding: 15px 20px;
+    width: 100%;
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    color: #555555;
+}
+
+.field:focus {
+    outline: none !important;
+    border: 1px solid #c0301c;
+}
+
+.textarea {
+    font-family: inherit;
+}
+
+.disclaimer {
+    font-size: 0.75rem;
+    padding-left: 40px;
+}
+
+.disclaimer_decoration {
+    color: #c0301c;
+}
+
+.form-actions {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-top: 25px;
+}
+
+.button {
+    font-family: 'Montserrat';
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background: none;
+    border: solid 2px #FFFFFF;
+    padding: 20px 35px;
+    max-width: 180px;
+    align-self: center;
+    margin-top: 50px;
+}
+
+.button-submit {
+    color: #555555;
+    border: solid 1px #555555;
+    font-size: 0.75rem;
+    margin: 0;
+    
+    margin-left: 50px;
+
+    align-self: center;
 }
 
 .address-title {
@@ -570,3 +748,65 @@ body{
     text-decoration: none;
     color: rgb(85, 85, 85);
 }
+
+.footer {
+    background-color: #c0301c;
+    display: flex;
+    flex-direction: column;
+
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  
+  .section__decoration_social::after{
+    border-bottom: 2px solid #fff;
+    opacity: 1;
+  }
+  
+.social-media {
+    flex-direction: column;
+    padding: 0;
+    padding-bottom: 30px;
+}
+
+.social-media__list {
+    display: flex;
+    
+    
+    width: 35%;
+    list-style: none;
+    margin: 0 auto;
+}
+
+.social-media__item {
+    background-image: url(../img/twitter.svg);
+    background-repeat: no-repeat;
+    background-color: #c0301c;
+    
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    border-radius: 50%;
+    background-position: center center;
+    border:2px solid #dddddd;
+    width: 35px;
+    height: 35px;
+}
+
+.social-media__item:hover {
+    border:none;
+}
+  
+  .copyrights {
+    text-align: center;
+    padding-bottom: 25px;
+  }
+  
+  .copyrights__link {
+    text-decoration: none;
+    color: #fff;
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    text-align: center;
+  }
+  
