--- a/css/style2.css
+++ b/css/style2.css
@@ -54,13 +54,12 @@ body{
     margin: 0 auto;
     width: 75%;
     max-width: 1200px;
-    padding-bottom: 100px;
+    padding-bottom: 8%;
 }
 
 .menu-box {
-    justify-content: space-between;
-    align-items: center;
     padding-top: 40px;
+    padding-bottom: 0;
 }
 
 .logo {
@@ -68,21 +67,20 @@ body{
     font-family: 'Montserrat';
     font-size: 1.5rem;
     font-weight: 800;
-    color: #FFFFFF
+    color: #FFFFFF;
+    text-decoration: none;
 }
 
 .menu__list {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
     margin: 0;
     padding: 0;
 }
 
 .menu__item {
     list-style-type: none;
-    display: inline-block;
-}
-
-.menu__item:nth-child(n+2) {
-    margin-left: 35px;
 }
 
 .menu__link {
@@ -96,7 +94,8 @@ body{
 
 .title-box {
     flex-direction: column;
-    padding-top: 260px;
+    padding-top: 21%;
+    padding-bottom: 21%;
 }
 
 .title {
@@ -109,12 +108,10 @@ body{
 
 .main {
       font-family: 'Montserrat';
-      font-size: 3rem;
       text-transform: uppercase;
   }
 
 .sub {
-    font-size: 1.25rem;
     text-transform: capitalize;
     padding-top: 30px;;
 }
@@ -171,8 +168,6 @@ body{
 
 .services__list {
     display: flex;
-    justify-content:space-evenly;
-
     padding: 0;
 }
 
@@ -240,7 +235,7 @@ body{
 }
 
 .about-us-section {
-    background-color:#dddddd ;
+    background-color:#f8f8f8 ;
 }
 
 .about-us {
@@ -249,33 +244,36 @@ body{
 
 .about-us__content {
     display: flex;
-    justify-content: space-evenly;
 }
 
 .about-us__text {
     font-size: 0.9rem;
-    width: 47%;
     margin: 0;
-    padding: 60px 0;
 }
 
 .about-us__cards {
     display: flex;
-    justify-content: space-evenly;
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
-.about-us__item {
-    width: 22%;
-}
-
 .img-box {
     width: 100%;
-    height: auto;
-   
+    height: 61%;
+    overflow: hidden;
     position: relative;
+}
+
+.img-box:hover:after {
+    content:"";
+    background: #555555;
+    opacity: 0.5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .block-active{
@@ -284,12 +282,11 @@ body{
     bottom:0;
     right:0;
     top:0;
-    background: #555555;
-    opacity: 0.7;
     padding:5px;
     display:none;
-
     padding-top: 190px;
+
+    z-index: 999;
 }
 
 .profile__contacts {
@@ -349,7 +346,9 @@ body{
 }
 
 .about-us__picture {
+    display: block;
     max-width: 100%;
+    height: auto;
 }
 
 .about-us__name {
@@ -402,18 +401,87 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    
 }
 
 .latest-works__img-box {
     width: 30%;
-    height: 320px;
+    padding-bottom: 27%;
     overflow: hidden;
 }
 
 .latest-works__img-box:nth-child(n+4) {
     margin-top: 3%;
 }
+
+.latest-works__img-box_1{
+    background-image: url('../img/latestwork-1.gif');
+    background-color: #c0301c 0.5;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.latest-works__img-box_2{
+    background-image: url('../img/latestwork-2.gif');
+    background-color: #c0301c 0.5;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+.latest-works__img-box_3{
+    background-image: url('../img/latestwork-3.gif');
+    background-color: #c0301c 0.5;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.latest-works__img-box_4{
+    background-image: url('../img/latestwork-4.gif');
+    background-color: #c0301c 0.5;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.latest-works__img-box_5{
+    background-image: url('../img/latestwork-5.gif');
+    background-color: #c0301c 0.5;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+.latest-works__img-box_6{
+    background-image: url('../img/latestwork-6.gif');
+    background-color: #c0301c 0.5;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.latest-works__img-box_7{
+    background-image: url('../img/latestwork-7.gif');
+    background-color: #c0301c 0.5;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.latest-works__img-box_8{
+    background-image: url('../img/latestwork-8.gif');
+    background-color: #c0301c 0.5;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+.latest-works__img-box_9{
+    background-image: url('../img/latestwork-9.gif');
+    background-color: #c0301c 0.5;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
 
 .call-for-action {
     background-image: url('../img/background2.png');
@@ -566,7 +634,7 @@ body{
 }
 
 .customers-section {
-    background-color:#dddddd ;
+    background-color:#f8f8f8 ;
     padding-top: 100px;
 }
 
@@ -592,7 +660,21 @@ body{
     padding-left: 5%;
 }
 
+.customers__review__list {
+    display: flex;
+    justify-content: center;
+    
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 .customers__review-card {
+    display: none;
+}
+
+.customers__review-card_active {
+    display: block;
     width: 63%;
 }
 .customers__review-text {
@@ -607,6 +689,25 @@ body{
     font-size: 1.25rem;
     margin: 0;
     padding: 0;
+}
+
+.slider-buttons {
+    margin-top: 3.5%;
+}
+
+.slider-button {
+    width: 15px;
+    height: 15px;
+    
+    border-radius: 50%;
+    background-color: #dddddd;
+    border: 1px solid #dddddd;
+}
+
+.slider-button:focus {
+    background-color: #c0301c;
+    border: 1px solid #c0301c;
+    outline: none;
 }
 
 .contact-us {
@@ -809,4 +910,118 @@ body{
     text-transform: uppercase;
     text-align: center;
   }
+
+  @media(min-width: 769px) {
+
+    .menu-box {
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    
+    .logo-box{
+        width: 45%;
+    }
+    
+    .menu {
+        width: 49%;
+    }
+
+    .main {
+        font-size: 3rem;
+    }
   
+    .sub {
+        font-size: 1.25rem;
+    }
+
+    .services__list {
+        justify-content:space-evenly;
+    }
+
+    .about-us__content {
+        justify-content: space-evenly;
+    }
+
+    .about-us__text {
+        width: 47%;
+        padding: 10% 0;
+    }
+
+    .about-us__cards {
+        justify-content: space-evenly;
+    }
+
+    .about-us__item {
+        width: 22%;
+    }
+
+}
+ 
+  @media(max-width: 768px) {
+    .menu-box {
+        justify-content: space-between;
+    }
+
+      .menu__list {
+          flex-direction: column;
+      }
+
+      .menu__item:nth-child(n+2) {
+          margin-left: 0;
+      }
+
+      .main {
+        font-size: 2rem;
+    }
+  
+    .sub {
+        font-size: 1rem;
+    }
+
+    .services__list {
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+    }
+
+    .services__item {
+        width: 100%;
+    }
+
+    .services__item:nth-child(n+2) {
+        margin-top: 10%;
+    }
+
+    .about-us__content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .about-us__text {
+        margin-top: 10%;
+    }
+
+    .about-us__text:nth-child(n+2) {
+        width: 100%;
+        margin-bottom: 10%;
+    }
+
+    .about-us__cards {
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .about-us__item {
+        width: 48%;
+    }
+
+    .about-us__item:nth-child(n+3) {
+        margin-top: 2.5%;
+    }
+
+    .latest-works__content {
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+  }
