--- a/css/style2.css
+++ b/css/style2.css
@@ -260,10 +260,24 @@ body{
 
 .img-box {
     width: 100%;
-    height: 61%;
+    display: block;
     overflow: hidden;
     position: relative;
 }
+  
+  .img-box:before {
+    content: '';
+    display: block;
+    padding-top: 100%;
+  }
+  
+  .about-us__picture {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 
 .img-box:hover:after {
     content:"";
@@ -374,7 +388,7 @@ body{
 
 .latest-works__options {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -391,10 +405,6 @@ body{
 
 .latest-works__link:hover{
     color: #c0301c;
-}
-
-.latest-works__option:nth-child(n+2) {
-    margin-left: 25px;
 }
 
 .latest-works__content {
@@ -538,16 +548,11 @@ body{
     margin-top: 75px;
     justify-content: space-around;
 }
-.blog-post__picture {
-    width: 40%;
-}
 
 .blog-post__img {
     width: 100%;
 }
-.blog-posts__item {
-    width: 50%;
-}
+
 .blog-posts_header-box {
     display: flex;
     align-items: center;
@@ -645,7 +650,8 @@ body{
 .customers__list {
     display: flex;
     width: 75%;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -655,9 +661,6 @@ body{
 .customers__items {
     margin: 0;
     padding: 0;
-}
-.customers__items:nth-child(n+2) {
-    padding-left: 5%;
 }
 
 .customers__review__list {
@@ -716,38 +719,23 @@ body{
 
 .contact-us__content {
     display: flex;
-    justify-content: space-between;
     padding-top: 75px;
 }
 
 .contacts {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 30%;
-}
-
-.contact-form {
-    width: 70%;
+    list-style-type: none;
+    padding: 0;
 }
 
 .form-box {
     display: flex;
-    justify-content: space-between;
     width: 100%;
 
     box-sizing: border-box;
     padding: 0 50px;
     margin-bottom: 25px;
-}
-
-.form-group {
-    width: 47%;
-}
-
-.form-group_textarea {
-    width:100%;
-    padding: 0 50px;
 }
 
 .field {
@@ -774,13 +762,6 @@ body{
 
 .disclaimer_decoration {
     color: #c0301c;
-}
-
-.form-actions {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    margin-top: 25px;
 }
 
 .button {
@@ -842,7 +823,6 @@ body{
     display: flex;
     flex-direction: column;
     font-size: 0.75rem; 
-    padding-top: 20px;
 }
 
 .address-link {
@@ -873,8 +853,7 @@ body{
 .social-media__list {
     display: flex;
     
-    
-    width: 35%;
+    padding: 0;
     list-style: none;
     margin: 0 auto;
 }
@@ -955,6 +934,55 @@ body{
         width: 22%;
     }
 
+    .blog-post__picture {
+        width: 40%;
+    }
+
+    .blog-posts__item {
+        width: 50%;
+    }
+
+    .form-box {
+        justify-content: space-between;
+    }
+    
+    .form-group {
+        width: 47%;
+    }
+
+    .form-group_textarea {
+        width:100%;
+        padding: 0 50px;
+    }
+
+    .form-actions {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        margin-top: 25px;
+    }
+
+    .contact-us__content {
+        justify-content: space-between;
+    }
+
+    .contacts {
+        justify-content: space-between;
+        width: 30%;
+    }
+
+    .contact-form {
+        width: 70%;
+    }
+
+    .address-text {
+        padding-top: 20px;
+    }
+
+    .social-media__list {
+        width: 280px;
+    }
+
 }
  
   @media(max-width: 768px) {
@@ -998,6 +1026,7 @@ body{
     }
 
     .about-us__text {
+        text-align: center;
         margin-top: 10%;
     }
 
@@ -1022,6 +1051,96 @@ body{
     .latest-works__content {
         flex-wrap: wrap;
         justify-content: space-between;
+    }
+
+    .latest-works__link {
+        font-size: 0.7rem;
+    }
+
+    .blog-posts__content {
+        flex-direction: column;
+    }
+
+    .blog-post__picture {
+        width: 100%;
+    }
+
+    .blog-posts__item {
+        width: 100%;
+    }
+
+    .contact-us__content {
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    .contacts {
+        width: 100%;
+        align-items: center;
+    }
+
+    .address-card {
+        display: flex;
+    }
+
+    .address-card:nth-child(n+2) {
+        margin-top: 25px;
+    }
+
+    .address-title {
+        width: 40%;
+        font-size: 0.6rem;;
+    }
+
+    .address-text {
+        width: 60%;
+        font-size: 0.5rem;
+    }
+
+    .form-box {
+        justify-content: space-around;
+        flex-direction: column;
+    }
+
+    .form-group {
+        width: 100%;
+    }
+
+    .form-group:nth-child(n+2) {
+        margin-top: 25px;
+    }
+
+    .form-group_textarea {
+        width:100%;
+        padding: 0 50px;
+    }
+
+    .form-actions {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        margin-top: 25px;
+    }
+
+    .contact-us__content {
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .contacts {
+        width: 100%;
+        
+    }
+
+    .address-card {
+        width: 50%;
+    }
+
+    .contact-form {
+        width: 100%;
+    }
+
+    .social-media__list {
+        width: 80%;
     }
 
   }
